@@ -1,3 +1,13 @@
+Thu Mar 19 04:55:53 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* internal.h (IMEMO_DEBUG): added.
+
+	* internal.h: remove unused FL_IMEMO_MARK_V[0-3].
+
+	* gc.c (rb_imemo_new_debug): added.
+
+	* gc.c (obj_info): show imemo type name.
+
 Thu Mar 19 04:52:26 2015  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (RGENGC_OLD_NEWOBJ_CHECK): add check mechanism.
